# actuator_network

./: .gitignore  DockerfileCpu  DockerfileGpu  README.md  docker-compose.yml  pyproject.toml
src/actuator_network/: actuator_network.py  test.py  train rnn.py  train.py  train_mlp.py  train_rnn.py  train_transformer.py
src/actuator_network/helpers/: mcap_to_pandas.py  pandas_processing.py  pandas_to_mcap.py  pandas_to_torch.py  torch_model.py  trainer.py  wrapper.py
